# machine-config

./: .gitignore  .gitmodules  .mcp.json  .rgignore  AGENTS.md  CHERRY_PICKS  CLAUDE.md  GEMINI.md  LICENSE  MIGRATION_PLANS.md  NBB.md  PLANS.md  README.md  add-package.sh  apply.sh  bootstrap.sh  build.sh  cachy-tweaks.nix  claude-discord.sh  configuration.nix  deploy-all.sh  deploy-local.sh  deploy-tsugumi.sh  deploy-v4.sh  deploy.sh  diff.sh  flake.nix  ganbot.nix  hardware-configuration.nix  install.sh  kube.nix  kwin.patch  machines.nix  mount-encfs.sh  network.nix  nixos-infect  nohup.out  package-lock.json  personal.nix  pull.sh  (+8 more)
.claude/: settings.json  settings.local.json
agents/: rust.md
ansible/: ansible.cfg  inventory.yml  site.yml
backup/: run.sh
basic-testing-config/: configuration.nix  default.nix
context/: CLAUDE.md
disnix/: clean.sh  deploy.sh
docs/: CLAUDE.md  jujutsu-jj-guide.md  local-research.md  nixos-custom-iso-images.md  nixos-repository-architecture.md  scheduler.md  web-research.md
dotfiles/: install.sh
emacs/: .emacs
home/: home.nix  neovim-plugins.nix  neovim.nix  tmux.nix  zsh-ohmyzsh.nix
homura/: default.nix  hardware-configuration.nix
hooks/: stop-hook.sh
installer/: build.sh  cd.nix  default.nix  kexec.nix
kaho/: configuration.nix  default.nix  hardware-configuration.nix
kwin-bug/: README.md  TODO.md  default.nix  drm-atomic-log.c  drm-atomic-log.nix
lib/: default.nix  mk-crane-package.nix  ssh-keys.nix  versions.nix
madoka/: configuration.nix  default.nix  hardware-configuration.nix  hydra.nix  mediawiki.nix  minecraft.nix
modules/: agenix.nix  amdgpu.nix  basics.nix  bcachefs.nix  cachy-kernel.nix  caddy.nix  cli-tools.nix  cliApps.json  cloudflare-dyndns.nix  default.nix  defaultApps.json  desktop.nix  desktopApps.json  dns.nix  emergency-shell.nix  exceptions.nix  home-manager.nix  kernel-modules.nix  keys.nix  kubernetes-master.nix  launchable.nix  libvirtd.nix  logrotate.nix  magic-reboot.nix  mcupdater.nix  mdns.nix  monitoring.nix  neovim.nix  netboot-server.nix  networking.nix  nginx.nix  nix-build-balancer.nix  nix-serve.nix  nix.nix  nvidia.nix  performance-default.nix  performance-desktop.nix  performance.nix  plex.nix  powersave.nix  (+24 more)
old/: CHERRY_PICKS  LICENSE  README.md  flake.nix  glfw.patch  install-kexec  run-kexec.sh  setup-nixonly.sh  shell.nix  update-installer.sh  xwayland-mr-967.diff
pkgs/: zsh-sunaku-theme.nix
quirks/: amd-x3d.nix  g903.nix
saya/: configuration.nix  default.nix  hardware-configuration.nix  sdbot.nix
scripts/: check-ipv6.sh
secrets/: CLAUDE.md  anidb-password.age  anidb-user.age  authelia-jwt-key.age  authelia-storage-key.age  borg.sh  borgbackup.age  caddy.env.age  claude-api.key.age  cloudflare-dyndns-token.age  default.nix  dyndns-pw  dyndns.age  erisia-webhook.url.age  grafana-admin-password.age  hetzner.nix  irc-tool.env.age  kubernetes-tokens.csv  magic-reboot.key.age  matrix-registration.key  monitoringWebhook.age  mysql-pw  redis-nixcheck-password.age  redis-password.age  rendezvous.key.age  restic-password.age  restic.pw  restic.pw.age  rolebot-config.json.age  rsa_saya  rsa_tromso  rsa_tsugumi  saya-host-key.enc  secrets.nix  sv-network.nix  test.age  ups.pw  upsd.users  upsmon.conf  userPassword.age  (+3 more)
secrets-encfs/: .encfs6.xml  6mnFim6B392VeiLA6FVtilS0  9xvmRBGttkFPMv167Qs4aklX  AxTFgUnduC6Or4H-I158KT6GbM6WtNdD6af-cg8-PXlWA0  CqZAaAuXI7CU490lTYKjhHwDVervBNrN7dTTVBTfxpZeq-  KBxGcad49pBXc79u1,8185xZ  Nx8Jnt0jPQVopFDPuLGi6Dft  Tp,2Vc6XtJRanPCVeawvn6Cs  cMIeU0FSdQWvWia30u1EclCf  gwF36hZTOnxXBH3TcAsJfW3V  i113DHNmgHfcIfJKMIhxhNZM  iIc3tSNcqU13JHOEHQjBdDbw  o4Bx8U5wy3439g1mzjpVxQAL  wRE-tFl8E0uQwzPuaWsPZyPP
tests/: basic-desktop.nix  saya-installer-vm.nix
tools-for-claude/: format-nix.sh  (+2 more)
tools/aniwatch/: CLAUDE.md  Cargo.toml  default.nix
tools/aniwatch/src/: main.rs
tools/game-watcher/: Cargo.toml
tools/game-watcher/src/: config.rs  detect.rs  firewall.rs  gpu.rs  main.rs  rules.rs  service.rs
tools/irc-tool/: Cargo.toml  default.nix
tools/irc-tool/src/: main.rs
tools/network-monitor/: Cargo.toml  README.md  config.example.toml  default.nix
tools/network-monitor/src/: main.rs
tools/nix-build-balancer/: AGENTS.md  Cargo.toml  DESIGN.md  SPEC.md  build.rs  default.nix
tools/nix-build-balancer/old-src/src/: cli.rs
tools/nix-build-balancer/old-src/src/daemon/: listeners.rs  routes.rs
tools/nix-build-balancer/old-src/src/persistence/: cleanup.rs  mod.rs
tools/nix-build-balancer/old-src/src/scheduler/: eligibility.rs  mod.rs  state.rs
tools/nix-build-balancer/old-src/src/telemetry/: remote.rs
tools/nix-build-balancer/src/: config.rs  estimator.rs  inflight.rs  lib.rs  main.rs  nix_protocol.rs  scheduler.rs  spool.rs  telemetry.rs  test_support.rs  util.rs
tools/nix-build-balancer/src/agent/: mod.rs
tools/nix-build-balancer/src/api/: client.rs  mod.rs  paths.rs  types.rs
tools/nix-build-balancer/src/controller/: mod.rs
tools/nix-build-balancer/src/daemon/: error.rs  mod.rs  poll.rs  routes.rs  state.rs
tools/nix-build-balancer/src/hook/: candidate.rs  delegate.rs  guard.rs  mod.rs
tools/nix-build-balancer/src/persistence/: admissions.rs  cleanup.rs  events.rs  mod.rs  observations.rs  queries.rs  schema.sql
tools/nix-build-balancer/src/protocol/: frame.rs  handshake.rs  mod.rs  ops.rs
tools/nix-build-balancer/src/scheduler/: host_state.rs  mod.rs  policy.rs
tools/nix-build-balancer/src/telemetry/: local.rs  mod.rs
tools/nix-build-balancer/tests/: lifecycle.rs
tools/nix-check-cached/: Cargo.toml  default.nix
tools/nix-check-cached/src/: main.rs
tools/ping-discord/: Cargo.toml  default.nix
tools/ping-discord/src/: main.rs  parser.rs
tools/rolebot/: Cargo.toml  default.nix
tools/rolebot/src/: main.rs
tools/updater/: CLAUDE.md  Cargo.toml  default.nix
tools/updater/src/: lib.rs  main.rs
tools/updater/src/commands/: get_nixos_build.rs  mod.rs  rebase_nixpkgs.rs
tools/victron-monitor/: CLAUDE.md  Cargo.toml  README.md  config.toml  default.nix  example.json
tools/victron-monitor/src/: main.rs
(+1241 files in other folders)
