[package]
name = "irc-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = { version = "0.7.9", features = ["macros"] }
dotenvy = "0.15.7"
futures = "0.3.31"
irc = { version = "1.0.0", default-features = false, features = ["ctcp", "tokio-rustls", "tls-rust"] }
rouille = "3.6.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
