[package]
name = "nix-build-balancer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
procfs = { version = "0.18", default-features = false }
rusqlite = { version = "0.32", features = [ "bundled" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
