[package]
name = "nix-build-balancer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[dependencies]
axum = "0.8"
clap = { version = "4", features = [ "derive" ] }
procfs = { version = "0.18", default-features = false }
rusqlite = { version = "0.32", features = [ "bundled" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time" ] }
tower = { version = "0.5", features = [ "util" ] }
tower-http = { version = "0.6", features = [ "timeout", "limit", "trace" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
