[package]
name = "rolebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
serenity = { version = "0.11.5", default-features = false, features = ["absolute_ratelimits", "cache", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.27.0", features = ["full"] }
