[package]
name = "victron-monitor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = { version = "0.13", features = ["process"] }
anyhow = "1"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
